fixed LoCApply card width too large bug

--- a/src/components/LoCCard/loccard.css
+++ b/src/components/LoCCard/loccard.css
@@ -7,6 +7,7 @@
   color: white;
   font-weight: lighter;
   min-width: 300px;
+  max-width: 300px;
 }
 
 .noBorder {
